bk_ida/gccida/g2/output_init_element
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6698:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6703:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6704:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6768:20: error: expected expression
v11 = ( tree_node *)digest_init( type, v5, require_constant_value, pending); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6768:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)digest_init( type, v5, require_constant_value, pending); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6769:19: error: expected expression
if ( ( tree_node *)global_trees == v11 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/c-typeck.c:6769:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)global_trees == v11 ) 
       ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_init_element/src/obj/c-typeck.o] Error 1
